 2011-01-16 14:05  alexpeshkoff 
   M builds/posix/prefix.linux_s390x
Damyan's patch fixing list of targets for linux/s390

 2011-01-16 13:19  alexpeshkoff 
   M src/common/cvt.cpp
   M src/common/cvt.h
   M src/jrd/SysFunction.cpp
   M src/jrd/cvt2.cpp
   M src/jrd/cvt_proto.h
   M src/jrd/mov.cpp
Fixed CORE-2756: substring from timestamp - unexpected result

 2011-01-16 09:59  robocop 
   M doc/README.fb_shutdown
Misc.

 2011-01-16 09:58  robocop 
   M src/jrd/svc.cpp
Style.

 2011-01-15 09:22  robocop 
   M src/jrd/cvt_proto.h
Misc.

 2011-01-15 09:18  robocop 
   M src/remote/inet.cpp
Misc.

 2011-01-15 09:09  robocop 
   M src/remote/remote.h
Misc.

 2011-01-15 09:07  robocop 
   M src/remote/os/win32/srvr_w32.cpp
Misc.

 2011-01-15 09:07  robocop 
   M src/remote/server.cpp
Avoid variable shadowing.

 2011-01-15 09:04  robocop 
   M doc/README.fb_shutdown
Misc.

 2011-01-14 06:47  dimitr 
   M src/jrd/met.epp
Correction.

 2011-01-14 06:19  dimitr 
   M src/jrd/met.epp
Tuned the code a little in order to avoid redundant retrievals. As a side effect, it downgrades three-way joins to two-way ones, thus helping the optimizer to choose a good plan in the worst (zero selectivity) cases. This should resolve CORE-2933 (Very slow execution of a script that creates a lot of metadata) and CORE-3237 (Slow compilation of stored procedures) without tweaking the optimizer constants.

 2011-01-12 10:56  dimitr 
   M doc/license/README.license.usage.txt
Corrected the license URLs.

 2011-01-12 00:15  asfernandes 
   M src/jrd/cmp.cpp
Backported fix for CORE-3306 - Invariant sub-query is treated as variant thus causing multiple invokations of a nested stored procedure

 2011-01-11 15:55  dimitr 
   M src/jrd/cmp.cpp
Better fix for CORE-3211. It avoids a crash due to a not initialized rse_relation[] array which is used inside ignore_dbkey().

 2011-01-11 07:48  alexpeshkoff 
   M doc/README.fb_shutdown
fixed to make it match actual code

 2011-01-07 11:24  dimitr 